# tunnelvision

./: Cargo.toml  README.md  flake.nix
sample_data/: artists.toml  tags.toml
sample_data/50_years_around_the_gear/: mural.toml
sample_data/the_tiger/: mural.toml
src/: data.rs  lib.rs  main.rs
src/pages/: error.rs  home.rs  mod.rs  mural.rs  mural_image.rs  mural_old.rs  not_found.rs  statics.rs
src/pages/static/: style.css
src/pages/templates/: error.html  home.html  mod.rs  mural.html  not_found.html  page_pre.html
