[package]
name = "tunnelvision"
description = "TunnelVision is an interactive catalog of the mural under RIT's Residence Halls."
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
fastrand = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
upon = "0.10.0"
